// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders default 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c5 {
  outline: none;
}

.c2 {
  background-color: #0068ef;
  color: #fff;
  width: 40px;
  height: 40px;
  min-width: 40px;
  padding: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  background-size: cover;
  background-image: url();
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        alt="avatar"
        class="c2 c3"
        color="primary"
        role="img"
        size="40"
      >
        <svg
          aria-hidden="true"
          class="c4 c5"
          fill="currentcolor"
          focusable="false"
          height="24"
          role="img"
          tabindex="-1"
          viewBox="0 -960 960 960"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47zM160-240v-32q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v32q0 33-23.5 56.5T720-160H240q-33 0-56.5-23.5T160-240zm80 0h480v-32q0-11-5.5-20T700-306q-54-27-109-40.5T480-360q-56 0-111 13.5T260-306q-9 5-14.5 14t-5.5 20v32zm240-320q33 0 56.5-23.5T560-640q0-33-23.5-56.5T480-720q-33 0-56.5 23.5T400-640q0 33 23.5 56.5T480-560zm0-80zm0 400z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders initials 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c2 {
  background-color: #0068ef;
  color: #fff;
  width: 40px;
  height: 40px;
  min-width: 40px;
  padding: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  font-size: 14px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  background-size: cover;
  background-image: url();
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        alt="avatar"
        class="c2 c3"
        color="primary"
        role="img"
        size="40"
      >
        <div
          class="c4"
          font-size="1"
        >
          WS
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders mr elon 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c2 {
  background-color: #0068ef;
  color: #fff;
  width: 40px;
  height: 40px;
  min-width: 40px;
  padding: 8px;
}

.c4 {
  margin-left: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  margin: 0px;
}

.c7 {
  color: #4f6f8f;
  font-size: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  background-size: cover;
  background-image: url(https://pbs.twimg.com/media/DwSta0wUcAAQQR9.jpg);
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        alt="papa-elon"
        class="c2 c3"
        color="primary"
        role="img"
        size="40"
        src="https://pbs.twimg.com/media/DwSta0wUcAAQQR9.jpg"
      />
      <div
        class="c4 c5"
      >
        <h5
          class="c6"
        >
          Not Elon Musk
        </h5>
        <div
          class="c7"
          color="text.light"
          font-size="0"
        >
          totally.not.elon@musk.com
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
